<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- name-->
    <string name="app_name">KidsVocabularyGame</string>
    <!-- main menu -->
    <string name="quizButton">QUIZ</string>
    <string name="learnButton">LEARN</string>
    <string name="parentsButton">PARENTS</string>
    <!-- learn 2 -->
    <string name="learnAnimalsButton">LEARN ANIMALS</string>
    <!-- parents -->
    <string name="sSign">Settings</string>
    <string name="rateUsButton">RATE US!</string>
    <string name="aboutButton">ABOUT</string>
    <string name="languageText">language</string>
    <string name="musicText">music</string>
    <string name="onText">on</string>
    <string name="offText">off</string>
    <string name="animalsText">ANIMALS</string>

</resources>
